# chat_gpt_voice_vox

./: .env_example  .gitignore  README.md  pyproject.toml
src/: main.py
src/functions/: chat_gpt.py  voice_vox.py
